--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,17 @@
 
 <head>
   <title>App</title>
+  <script>
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: '1101524157028459',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v10.0'
+      });
+    };
+  </script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </head>
 
 <body>
